syntax = "proto3";

package test;

message request
{
    message inner
    {
        int32 t1 = 1;
        string t2 = 2;
    }
    int32 a = 1;
    int64 b = 2;
    float c = 3;
    double d = 4;
    string e = 5;
    bytes f = 6;
    inner g = 7;
    map<int32, string> h = 8;
    repeated int32 i = 9;
    repeated inner j = 10;
    map<string, inner> k = 11;
    map<string, bytes> l = 12;
}

message response
{
    int32 error = 1;
    bytes buffer = 2;
}

message empty
{

}

// 游戏结束
message GameOver
{
    int32 roomId = 1;          // 房间ID
    int64 winMoney = 2;        // 玩家输赢的金币数
}
